@@ -1,3 +1,9 @@
+2006-05-08  Jb Evain  <jbevain@gmail.com>
+
+	* Cecil.FlowAnalysis/AssemblyInfo.cs
+	  Makefile:
+		Sign the assembly.
+
 2006-01-30  Rodrigo B. de Oliveira  <rodrigobamboo@gmail.com>
 
 	* Makefile
